# nes

./: .dockerignore  Dockerfile  README.md  docker-compose.backend.yml
agent_runtime_sim/: README.md  __init__.py  agents.py  library.py  simulation.py  world.py
agent_runtime_sim/tests/: test_runtime.py
deploy/linux-vm/: README.md  Vagrantfile  bootstrap.sh
doc/: replay_input_log.md
docker/: backend.Dockerfile
lib/inc/: common.h  nes_cpu.h  nes_input.h  nes_mapper.h  nes_memory.h  nes_ppu.h  nes_system.h  nes_trace.h
lib/src/: nes_cpu.cpp  nes_input.cpp  nes_mapper_mmc3.cpp  nes_memory.cpp  nes_ppu.cpp  nes_system.cpp
lib/src/mappers/: nes_mapper_mmc1.cpp
models/: README.md
qube-forensic-console/: README.md  pyproject.toml
qube-forensic-console/console/: index.html  package-lock.json  package.json
qube-forensic-console/console/src/: api.ts  app.tsx  hashing.ts  jcs.ts  types.ts
qube-forensic-console/console/src/components/: HashBadge.tsx  KeyValueTable.tsx
qube-forensic-console/console/src/views/: EventDetail.tsx  EventList.tsx
qube-forensic-console/schemas/forensics/: qube_forensic_report.v1.schema.json
qube-forensic-console/schemas/telemetry/: telemetry_event.v1.schema.json
qube-forensic-console/src/qube_forensics/: __init__.py  emit_ndjson.py  hashing.py  ingest.py  jcs.py  validate.py
qube-forensic-console/telemetry_store/: ssot_telemetry_audit.ndjson
scripts/: backend-shell.sh  build_wasm_runtime.sh  run_wasm_server.sh
src/: neschan.cpp
test/: state_test.cpp
web/llm-canvas/: README.md  index.html
