[project]
name = "qube-forensic-console"
version = "0.1.0"
description = "Qube Forensic Console scaffold"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.21"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
